--- a/Lesson-6/css/small.css
+++ b/Lesson-6/css/small.css
@@ -11,29 +11,16 @@ body {
 header {
 	background: #b3d9ff;
 	padding-top: 1%;
-	
 }
 
 #headerText {
-	text-align: center;
 	font-size: 2em;
-	margin-top: -22px;
-	margin-right: 15px;
 }
 
 #subHeaderText {
-	text-align: center;
 	font-size: 0.9em;
 	margin-top: -32px;
-	margin-right: 15px;
 }
-
-#topimage img { 
-	width: 100%;
-	margin: 0 0 0 2%;
-	float: right;
-}
-
 
 /*-------------SUMMARY TABLE---------------------*/
 #currentCond {
@@ -48,7 +35,6 @@ header {
 	font-size: 1.5em;
 	border-collapse: collapse;
 }
-
 #summary {
 	color: #ff9933; font-weight: 600;
 }
@@ -105,6 +91,20 @@ header {
   }
 }
 
+/* Display links vertically instead of horizontally when less-than 600px wide*/
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 /*--------------------------------------------------END NAVIGATION BAR------------------------------------------------------*/
 
 section.forecast { display: none; }  /* hide 10-day forecast on small screens */
@@ -126,4 +126,5 @@ section.forecast { display: none; }  /* hide 10-day forecast on small screens */
 
 article.news {
 	padding-bottom: 10px;
-	overflow: auto;}
+	overflow: auto;
+}
